--- a/JWDataTracker.Test/JWDataTracker.Test.csproj
+++ b/JWDataTracker.Test/JWDataTracker.Test.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\JWDataTracker.Infrastructure\JWDataTracker.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DataTracker.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
