- added new testing

--- a/JWDataTracker.Application/JWDataTracker.Application.csproj
+++ b/JWDataTracker.Application/JWDataTracker.Application.csproj
@@ -13,4 +13,8 @@
   <ItemGroup>
     <Folder Include="CongregationUser\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
 </Project>
