--- a/JWDataTrackerWeb/package.json
+++ b/JWDataTrackerWeb/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@angular/service-worker": "~9.1.13",
+    "@auth0/angular-jwt": "^5.0.2",
+    "crypto-es": "^1.2.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
