--- a/JWDataTrackerWeb/package.json
+++ b/JWDataTrackerWeb/package.json
@@ -16,33 +16,34 @@
     "@angular/compiler": "~9.1.13",
     "@angular/core": "~9.1.13",
     "@angular/forms": "~9.1.13",
+    "@angular/localize": "~9.1.13",
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@angular/service-worker": "~9.1.13",
     "@auth0/angular-jwt": "^5.0.2",
-    "@progress/kendo-angular-grid": "^6.1.3",
-    "crypto-es": "^1.2.7",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
     "@progress/kendo-angular-buttons": "^7.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^6.0.0",
+    "@progress/kendo-angular-dialog": "^6.0.2",
     "@progress/kendo-angular-dropdowns": "^6.0.0",
     "@progress/kendo-angular-excel-export": "^4.0.0",
+    "@progress/kendo-angular-grid": "^6.1.3",
     "@progress/kendo-angular-inputs": "^8.0.0",
     "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.0",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
-    "@progress/kendo-angular-popup": "^4.0.3",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-treeview": "^6.0.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.0.0",
     "@progress/kendo-licensing": "^1.0.2",
-    "@progress/kendo-angular-treeview": "^6.0.0",
-    "@angular/localize": "~9.1.13",
-    "@progress/kendo-theme-default": "^5.0.0"
+    "@progress/kendo-theme-default": "^5.0.0",
+    "crypto-es": "^1.2.7",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.15",
