--- a/JWDataTrackerWeb/package.json
+++ b/JWDataTrackerWeb/package.json
@@ -42,6 +42,7 @@
     "@progress/kendo-licensing": "^1.1.1",
     "@progress/kendo-theme-default": "^5.0.0",
     "crypto-es": "^1.2.7",
+    "moment": "^2.29.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
