--- a/JWDataTrackerWeb/package.json
+++ b/JWDataTrackerWeb/package.json
@@ -37,6 +37,7 @@
     "@progress/kendo-angular-pager": "^3.0.3",
     "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-progressbar": "^2.0.0",
     "@progress/kendo-angular-treeview": "^6.0.0",
     "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.9.3",
@@ -44,11 +45,11 @@
     "@progress/kendo-theme-default": "^5.0.0",
     "crypto-es": "^1.2.7",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@progress/kendo-angular-progressbar": "^2.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.15",
