--- a/JWDataTracker.Api/Properties/launchSettings.json
+++ b/JWDataTracker.Api/Properties/launchSettings.json
@@ -1,23 +1,23 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52782",
-      "sslPort": 44379
+      "applicationUrl": "http://localhost:49791/",
+      "sslPort": 44314
     }
   },
   "profiles": {
     "JWDataTracker.Api": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7240;http://localhost:5240",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7240;http://localhost:5240",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
