--- a/JWDataTracker.Api/JWDataTracker.Api.csproj
+++ b/JWDataTracker.Api/JWDataTracker.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2021.1.330" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,4 +21,7 @@
     <ProjectReference Include="..\JWDataTracker.Infrastructure\JWDataTracker.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Telerik.UI.for.AspNet.Core" />
+  </ItemGroup>
 </Project>
